force-app/main/default/objects/Appointment__c/fields/ABHA_Id__c.field-meta.xml
<CustomField>
    <fullName>ABHA_Id__c</fullName>
    <formula>Patient__r.ABHA_ID__c</formula>
    <label>ABHA Id</label>
    <type>Text</type>
</CustomField>