force-app/main/default/objects/Appointment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>TEXT(Doctor_Assigned__r.Department__c)</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>