force-app/main/default/objects/Appointment__c/fields/Doctor_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Assigned</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>