force-app/main/default/objects/Appointment__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <formula>Doctor_Assigned__r.Doctor_Name__c</formula>
    <label>Doctor Name</label>
    <type>Text</type>
</CustomField>