force-app/main/default/objects/Appointment__c/fields/Slot_End__c.field-meta.xml
<CustomField>
    <fullName>Slot_End__c</fullName>
    <label>Slot End</label>
    <type>DateTime</type>
</CustomField>