force-app/main/default/objects/Appointment__c/fields/Slot_Start__c.field-meta.xml
<CustomField>
    <fullName>Slot_Start__c</fullName>
    <label>Slot Start</label>
    <type>DateTime</type>
</CustomField>