force-app/main/default/objects/Appointment__c/fields/Type_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Appointment__c</fullName>
    <label>Type of Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>