force-app/main/default/objects/Appointment__c/recordTypes/Emergency.recordType-meta.xml
<RecordType>
    <fullName>Emergency</fullName>
    <active>true</active>
    <label>Emergency</label>
</RecordType>