force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ABHA_Id__c</columns>
    <columns>Department__c</columns>
    <columns>Doctor_Assigned__c</columns>
    <columns>Doctor_Name__c</columns>
    <columns>Patient__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Slot_Start__c</columns>
    <columns>Slot_End__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>