force-app/main/default/objects/Appointment__c/listViews/Emergency_ICU_Team_2_Appointment.listView-meta.xml
<ListView>
    <fullName>Emergency_ICU_Team_2_Appointment</fullName>
    <filterScope>Queue</filterScope>
    <label>Emergency ICU Team 2</label>
    <queue>Emergency_ICU_Team_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>